# My-lecture-slides-and-code

./: .gitignore  README.md  pyproject.toml
Code/: 1D_PSO.txt  2D_PSO.txt  GA.m  __init__.py  description  random_forest.py
tests/: conftest.py  test_validation.py
